<resources>
    <string name="app_name">Reddit</string>
    <string name="action_settings">Settings</string>
    <string name="post_thumbnail">Post Thumbnail</string>
    <string name="post_title">Post Title</string>
    <string name="vote_count">0</string>
    <string name="upvote_button">Upvote Button</string>
    <string name="downvote_button">Downvote Button</string>
    <string name="share">Share</string>
    <string name="share_button">Share Button</string>
    <string name="loading_Text">Fetching Top Posts…</string>
    <string name="post_content">Content comes here</string>
    <string name="share_using">Share via</string>
    <string name="check_internet">Please check your internet connection!</string>
    <string name="hint_url">Have an Image?</string>
    <string name="hint_content">Your content here</string>
    <string name="hint_subreddit">Subreddit</string>
    <string name="button_post">Post</string>
    <string name="title_of_your_awesome_post">Title of your awesome post</string>
    <string name="mandatory_text">All fields are mandatory</string>
    <string name="exceeds_char_messagge">Content should not exceed 255 characters</string>
    <string name="post_submitted_successfully">Hurray! Post submitted successfully.</string>
    <string name="sending_failed">Sending Failed</string>
    <string name="post_upvoted_string">Post Upvoted</string>
    <string name="is_toast_string">is toast</string>
    <string name="click_upvote_String">Click on upvote button</string>
    <string name="click_downvote_string">downvote click</string>
    <string name="oops_string">Oops...</string>
</resources>
