<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/content_padding"
    android:background="@color/cardview_shadow_end_color">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.70">

                <TextView
                    android:id="@+id/post_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/content_margin"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:textColor="@color/cardview_dark_background"
                    android:text="@string/post_title"/>

                <TextView
                    android:id="@+id/post_content"
                    android:text="@string/post_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_marginLeft="@dimen/content_margin"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/content_margin"
                    android:background="@color/cardview_dark_background"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/content_margin">

                    <ImageView
                        android:id="@+id/upvote_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/upvote_button"
                        android:src="@drawable/thumbs_up" />

                    <TextView
                        android:id="@+id/vote_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:text="@string/vote_count"/>

                    <ImageView
                        android:id="@+id/downvote_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/downvote_button"
                        android:src="@drawable/thumbs_down" />

                    <ImageView
                        android:id="@+id/share_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/share_button"
                        android:src="@drawable/share"
                        android:text="@string/share" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_weight="0.30"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/post_thumbnail"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>